--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,40 @@
     grid-row: 1;
     grid-column: 2;
     background-color: gray;
+    padding: 5px;
+    gap: 2px;
 }
 
-.top-right > .search-bar {
-    border: 2px solid red;
+.top-right .top {
+    display: flex;
+    padding: 0.5em;
 }
 
-.top-right > .navbar {
+.top-right .left { 
+    display: flex;
+    flex: 1;
+}
+.top-right .search-bar {
+    display: flex;
+    justify-content: start;
+    gap: 1em;
+    width: 80%;
+}
+.top-right input{
+    border-radius: 7px;
+    flex: 1 0 auto;
+}
+
+.top-right .right {
+    display: flex;
+    justify-content: space-evenly;
+    width: 35%;
+
+}
+
+.top-right .navbar {
     border: 2px solid red;
+    flex: 1;
 }
 
 
