--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* ---------------------------- */
+
+:root {
+    font-family: 'Poppins', sans-serif;
+}
+
+/* ---------------------------- */
 .container {
     height: 100vh;
     display: grid;
@@ -10,8 +18,30 @@
 .sidebar {
     grid-row: 1/-1;
     grid-column: 1; 
-    background-color: blue;
+    background-color: rgb(188, 188, 254);
+    display: grid;
+    grid-template-rows: repeat(12,minmax(30px,1fr)) 5fr;
 }
+
+.sidebar .header {
+    padding: 10px;
+    gap: 5px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    justify-content: end;
+
+}
+
+.header ~ div {
+    padding: 15px;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+    justify-content: end;
+
+}
+
 
 /* ---------------------------- */
 
