--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     height: 100vh;
     display: grid;
     grid-template-rows: 1fr 4fr;
-    grid-template-columns: 1fr minmax(600px, 4fr);
+    grid-template-columns: 1.5fr minmax(600px, 4fr);
 }
 
 /* ---------------------------- */
@@ -21,7 +21,7 @@
     grid-column: 1; 
     background-color: rgb(188, 188, 254);
     display: grid;
-    grid-template-rows: repeat(12,minmax(30px,1fr)) 5fr;
+    grid-template-rows: minmax(30px,1fr) 0.5fr repeat(10,minmax(30px,1fr)) 5fr;
     grid-template-columns: 1;
 }
 
@@ -29,15 +29,23 @@
     padding: 10px;
     gap: 5px;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    place-items: center;
+    grid-template-columns: 0.25fr 1fr;
+    font-size: 16pt;
+}
 
+.sidebar .header svg {
+    place-self: center;
+}
+
+.sidebar .header text{
+    justify-self: left;
+    align-self: center;
 }
 
 .header ~ div {
     padding: 3px;
     display: grid;
-    grid-template-columns: 0.6fr 1fr;
+    grid-template-columns: 0.3fr 1fr;
     align-items: center;
     justify-content: end;
 }
