--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,12 @@
 
 :root {
     font-family: 'Poppins', sans-serif;
-    color: whitesmoke;   
+    color: var(--davys-grey);   
+    --blue-bell: #B7ADCF;
+    --alice-blue: #F4FAFF;
+    --platinum: #DEE7E7;
+    --cadet: #4F646F;
+    --davys-grey: #535657;
 }
 
 /* ---------------------------- */
@@ -21,10 +26,11 @@
 .sidebar {
     grid-row: 1/-1;
     grid-column: 1; 
-    background-color: rgb(188, 188, 254);
+    background-color: var(--cadet);
     display: grid;
     grid-template-rows: minmax(30px,1fr) 0.5fr repeat(10,minmax(30px,1fr)) 5fr;
     grid-template-columns: 1;
+    color: var(--alice-blue);
 }
 
 .sidebar .header {
@@ -64,7 +70,7 @@
     flex-flow: column;
     grid-row: 1;
     grid-column: 2;
-    background-color: gray;
+    background-color: var(--blue-bell);
     padding: 20px;
     gap: 2px;
 }
@@ -89,6 +95,8 @@
 .top-right input{
     border-radius: 7px;
     flex: 1 0 auto;
+    background-color: var(--alice-blue);
+    border-color: var(--blue-bell)
 }
 
 .top-right .right {
@@ -125,6 +133,8 @@
     width: 8vw;
     aspect-ratio: 16/6;
     border-radius: 10px;
+    color: var(--alice-blue);
+    background-color: var(--cadet);
 }
 
 /* ---------------------------- */
@@ -132,21 +142,40 @@
 .bot-right {
     grid-row: 2;
     grid-column: 2;
-    background-color: lavenderblush;
+    background-color: var(--platinum);
     display: grid;
     grid-template-columns: 3fr 1fr;
 }
 
 .bot-right > .projects {
     display: grid;
-    background-color: beige;
+    grid-template-rows: min-content repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 1.5vh;
+    padding: 3px;
+}
+
+.projects text {
+    grid-column: 1/-1;
+    color: black;
+    place-self: left;
+    margin-left: 10px;
+    margin-bottom: -10px;
+}
+
+.projects .card {
+    background-color: var(--alice-blue);
+    border-radius: 10%;
+    width: 95%;
+    aspect-ratio: 18/11;
+    place-self: center;
 }
 
 /*----------------------------*/
 
 .bot-right > .feed {
     display: grid;
-    background-color: rgb(174, 195, 154);
     grid-template-rows: min-content 1fr min-content 1fr;
 }
 
@@ -161,12 +190,16 @@
 }
 
 .feed .news {
-    background-color: palegreen;
-    padding: 10px;
-    margin: 10px;
-    max-height: 300px;
 }
 
+.feed > div {
+    background-color: var(--alice-blue);
+    padding: 10px;
+    margin: 20px;
+    margin-top: 7px;
+    max-height: 300px;
+    border-radius: 10px;
+}
 .feed .news div{
     display: grid;
     grid-template-rows: min-content 1fr;
@@ -174,4 +207,5 @@
 
 .feed .trending {
     grid-template-columns: 1fr 5fr;
+    
 }
