--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     height: 100vh;
     display: grid;
     grid-template-rows: 1fr 4fr;
-    grid-template-columns: 1.5fr minmax(600px, 4fr);
+    grid-template-columns: 1fr minmax(600px, 4fr);
 }
 
 /* ---------------------------- */
@@ -145,6 +145,7 @@
     background-color: var(--platinum);
     display: grid;
     grid-template-columns: 3fr 1fr;
+    padding-bottom: 3vh;
 }
 
 .bot-right > .projects {
@@ -152,7 +153,8 @@
     grid-template-rows: min-content repeat(3, 1fr);
     grid-auto-rows: 1fr;
     grid-template-columns: repeat(2, 1fr);
-    row-gap: 1.5vh;
+    row-gap: clamp(5px, 8px, 10px);
+    column-gap: clamp(5px, 8px, 10px);
     padding: 3px;
 }
 
@@ -160,16 +162,37 @@
     grid-column: 1/-1;
     color: black;
     place-self: left;
-    margin-left: 10px;
-    margin-bottom: -10px;
 }
 
 .projects .card {
     background-color: var(--alice-blue);
-    border-radius: 10%;
-    width: 95%;
-    aspect-ratio: 18/11;
+    border-radius: 4%;
+    width: 350px;
+    height: auto;
     place-self: center;
+}
+
+.projects .project-container {
+    display: grid;
+    grid-template-rows: min-content 4fr 1fr;
+    padding: 5px;
+    margin: clamp(10px, 20px, 30px);
+}
+
+.projects .card text {
+    grid-row: 1;
+    font-size: 12pt;
+    font-weight: 800;
+}
+
+.projects .card span {
+    grid-row: 2;
+    font-size: 10pt;
+}
+
+.project-container svg-container {
+    justify-self: end;
+    display: block;
 }
 
 /*----------------------------*/
@@ -195,10 +218,11 @@
 .feed > div {
     background-color: var(--alice-blue);
     padding: 10px;
-    margin: 20px;
+    margin: 10px;
     margin-top: 7px;
+    margin-bottom: 0px;
     max-height: 300px;
-    border-radius: 10px;
+    border-radius: 4%;
 }
 .feed .news div{
     display: grid;
