--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@
     grid-column: 2;
     background-color: var(--platinum);
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 1.3fr;
     padding-bottom: 3vh;
 }
 
@@ -154,13 +154,22 @@
     grid-auto-rows: 1fr;
     grid-template-columns: repeat(2, 1fr);
     row-gap: clamp(5px, 8px, 10px);
-    column-gap: clamp(5px, 8px, 10px);
+    column-gap: clamp(12px, 16px, 20px);
     padding: 3px;
+
+}
+
+.projects > div:nth-child(odd) {
+    justify-self: start;
+}
+
+.projects > div:nth-child(even) {
+    justify-self: end;
 }
 
 .projects text {
     grid-column: 1/-1;
-    color: black;
+    color: var(--davys-grey);
     place-self: left;
 }
 
@@ -212,8 +221,15 @@
     display: grid;
 }
 
-.feed .news {
+.feed .news {   
+    overflow: auto;
+    padding: clamp(10px, 20px, 30px);
+    grid-auto-rows: 1fr;
+    grid-template-columns: 1fr;
+    gap: clamp(2px, 5px, 7px);
+    height: auto;
 }
+
 
 .feed > div {
     background-color: var(--alice-blue);
@@ -221,14 +237,23 @@
     margin: 10px;
     margin-top: 7px;
     margin-bottom: 0px;
+    margin-right: 2vw;
+    margin-left: 1vw;
     max-height: 300px;
     border-radius: 4%;
 }
 .feed .news div{
     display: grid;
     grid-template-rows: min-content 1fr;
+    border-bottom: 1px solid var(--davys-grey);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
 }
 
+.feed .news span {
+    font-weight: 600;
+}
 .feed .trending {
     grid-template-columns: 1fr 5fr;
     
