--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@
     background-color: var(--blue-bell);
     padding: 20px;
     gap: 2px;
+    box-shadow: 2px 2px 2px rgba(131, 117, 156, 0.238);
 }
 
 /*---------------------------*/
@@ -132,9 +133,11 @@
 .navbar .right button {
     width: 8vw;
     aspect-ratio: 16/6;
-    border-radius: 10px;
+    border-radius: 10%;
+    border: 1px solid var(--cadet);
     color: var(--alice-blue);
     background-color: var(--cadet);
+    box-shadow: none;
 }
 
 /* ---------------------------- */
@@ -181,6 +184,7 @@
     width: 350px;
     height: auto;
     place-self: center;
+    box-shadow: 2px 2px 2px rgba(131, 117, 156, 0.238);
 }
 
 .projects .project-container {
@@ -230,6 +234,7 @@
     grid-template-columns: 1fr;
     gap: clamp(2px, 5px, 7px);
     height: auto;
+    box-shadow: 2px 2px 2px rgba(131, 117, 156, 0.238);
 }
 
 
@@ -263,6 +268,7 @@
     padding: 12px;
     row-gap: 2px;
     column-gap: 3px;
+    box-shadow: 2px 2px 2px rgba(131, 117, 156, 0.238);
 }
 
 .feed .trending > svg {
