--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     height: 100vh;
     display: grid;
     grid-template-rows: 1fr 4fr;
-    grid-template-columns: 1fr minmax(600px, 4fr);
+    grid-template-columns: 1fr minmax(600px, 4.4fr);
 }
 
 /* ---------------------------- */
@@ -132,8 +132,10 @@
 }
 .navbar .right button {
     width: 8vw;
-    aspect-ratio: 16/6;
-    border-radius: 10%;
+    aspect-ratio: 16/4;
+    border-radius: 30%;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
     border: 1px solid var(--cadet);
     color: var(--alice-blue);
     background-color: var(--cadet);
@@ -147,27 +149,28 @@
     grid-column: 2;
     background-color: var(--platinum);
     display: grid;
-    grid-template-columns: 3fr 1.3fr;
+    grid-template-columns: 3fr 1.4fr;
     padding-bottom: 3vh;
 }
 
 .bot-right > .projects {
     display: grid;
-    grid-template-rows: min-content repeat(3, 1fr);
+    grid-template-rows: min-content;
     grid-auto-rows: 1fr;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     row-gap: clamp(5px, 8px, 10px);
-    column-gap: clamp(12px, 16px, 20px);
+    column-gap: clamp(10px, 11px, 12px);
     padding: 3px;
+    margin-left: 1.5vw;
 
 }
 
 .projects > div:nth-child(odd) {
-    justify-self: start;
+    justify-self: stretch;
 }
 
 .projects > div:nth-child(even) {
-    justify-self: end;
+    justify-self: stretch;
 }
 
 .projects > text {
@@ -181,7 +184,7 @@
 .projects .card {
     background-color: var(--alice-blue);
     border-radius: 4%;
-    width: 350px;
+    width: clamp(200px, 1fr, 400px);
     height: auto;
     place-self: center;
     box-shadow: 2px 2px 2px rgba(131, 117, 156, 0.238);
