Implement trailing ellipses on the cards in projects and feed
This commit utilizes -webkit-line-clamp to add trailing ellipsis to the
multiline.

--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@
     display: grid;
     grid-template-rows: min-content;
     grid-auto-rows: 1fr;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     row-gap: clamp(5px, 8px, 10px);
     column-gap: clamp(10px, 11px, 12px);
     padding: 3px;
@@ -212,6 +212,10 @@
 .projects .card span {
     grid-row: 2;
     font-size: 10pt;
+    -webkit-line-clamp: 4;
+    overflow:hidden;
+    -webkit-box-orient: vertical; 
+    display: -webkit-box;
 }
 
 .project-container svg-container {
@@ -263,13 +267,16 @@
     display: grid;
     grid-template-rows: min-content 1fr;
     border-bottom: 1px solid var(--davys-grey);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 100%;
 }
 
 .feed .news span {
     font-weight: 600;
+}
+.article subtext {
+    -webkit-line-clamp: 3;
+    overflow:hidden;
+    -webkit-box-orient: vertical; 
+    display: -webkit-box;
 }
 /*-------------------------------------------*/ 
 .feed .trending {
